# maestro

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  Untitled.ipynb  activate.sh  build_env.sh  dev_envs.sh  docker-compose.yml  envs.sh  maestro.py  prod_envs.sh  pyproject.toml  requirements.txt  setup.py
data/db/: database.db
docs/: task_example.ipynb
examples/chain_task/: chain_task.ipynb
maestro/: __init__.py  app.py  backend.py  database_parser.py  enumerations.py  exceptions.py  executor_parser.py  expand_folders.py  main.py  models.py  schemas.py  task_parser.py
maestro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
maestro/api/: PilotParser.py  __init__.py  base.py  client.py  client_executor.py  client_mailing.py  client_pilot.py  client_postgres.py  client_schedule.py  clients.py  dataset.py  postgres.py
maestro/cli/: __init__.py
maestro/clients/: slurm.py
maestro/cluster/: __init__.py  slurm.py
maestro/console/: __init__.py  maestro.py  main.py
maestro/db/: db_client.py
orchestra/: __init__.py  status.py
scripts/: create_database.py  delete_database.py  job.py  maestro.py  maestro_admin_cli.py  maestro_cli.py  maestror_cli.py  run_executor.sh  x.txt
servers/: Makefile  docker-compose-dev.yml  docker-compose.yml
share/: cancel.sh  deploy.sh  deploy_executor.sh  run_executor.sh  run_maestro.sh  run_master.sh  run_slave.sh  run_srun.sh  setup_devices.sh  srun_maestro.sh  srun_master.sh  srun_slave.sh
test_basics/: program.py
tests/: Makefile  docker-compose.yml  test_basics.py  test_server.py
(+249 files in other folders)
