[tool.poetry]
name = "orchestra-server"
version = "0.1.0"
description = ""
authors = ["jodafons <jodafons@lps.ufrj.br>"]
readme = "README.md"
packages = [{include = "orchestra_server"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.101.1"
loguru = "^0.7.0"
flask-security = "^3.0.0"
passlib = "^1.7.4"
ptable = "^0.9.2"
cython = "^3.0.0"
flask-mail = "^0.9.1"
numpy = "^1.25.2"
requests = "^2.31.0"
werkzeug = "^2.3.7"
jinja2 = "^3.1.2"
flask = "^2.3.2"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.5"
benedict = "^0.3.2"
flask-admin = "^1.6.1"
flask-bootstrap = "^3.3.7.1"
flask-cors = "^4.0.0"
prettytable = "^3.8.0"
psycopg2-binary = "^2.9.7"
sqlalchemy-utils = "^0.41.1"
ansi2html = "^1.8.0"
colorama = "^0.4.6"
psutil = "^5.9.5"
tqdm = "^4.66.1"
pytest-order = "^1.1.0"
uvicorn = "^0.23.2"
pydantic = "^2.1.1"
orjson = "^3.9.4"
python-socketio = "^5.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
